force-app/main/default/objects/MPM4_BASE__TH_User_Settings__c/MPM4_BASE__TH_User_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Time Tracking Settings</label>
</CustomObject>