force-app/main/default/objects/MPM4_BASE__TH_User_Settings__c/fields/MPM4_BASE__Calculate_Daily_Total_From_All_Views__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Calculate_Daily_Total_From_All_Views__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, daily totals on the time entry grid will be calculated from all time entries regardless of the selected list view. Disable to only calculate daily totals from time included in the selected view.</description>
    <inlineHelpText>When enabled, daily totals on the time entry grid will be calculated from all time entries regardless of the selected list view. Disable to only calculate daily totals from time included in the selected view.</inlineHelpText>
    <label>Calculate Daily Total From All Views</label>
    <type>Checkbox</type>
</CustomField>