force-app/main/default/objects/MPM4_BASE__TH_User_Settings__c/fields/MPM4_BASE__Custom_Approve_Deny_Emails__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Custom_Approve_Deny_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled the manager will be able to customize the emails that are sent when approving and denying time entries.</description>
    <inlineHelpText>When enabled the manager will be able to customize the emails that are sent when approving and denying time entries.</inlineHelpText>
    <label>Custom Time Entry Approve/Deny Emails</label>
    <type>Checkbox</type>
</CustomField>