force-app/main/default/objects/MPM4_BASE__TH_User_Settings__c/fields/MPM4_BASE__Daily_Hours_Total_Validation__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Daily_Hours_Total_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ensures resources daily time entries add up to at least the value on their resource records daily workday duration field on submission. Validated as an 8 hour workday if no workday duration is set.</inlineHelpText>
    <label>Validate Daily Total Hours</label>
    <type>Checkbox</type>
</CustomField>