force-app/main/default/objects/MPM4_BASE__TH_User_Settings__c/fields/MPM4_BASE__Day_1__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Day_1__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Display Day 1</label>
    <type>Checkbox</type>
</CustomField>