force-app/main/default/objects/MPM4_BASE__TH_User_Settings__c/fields/MPM4_BASE__Default_Filter__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Default_Filter__c</fullName>
    <inlineHelpText>The name of the list view you would like the time entry grid to default to (must be valid ListView name for default object)</inlineHelpText>
    <label>Default Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>