force-app/main/default/objects/MPM4_BASE__TH_User_Settings__c/fields/MPM4_BASE__Default_Object__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Default_Object__c</fullName>
    <label>Default Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>