force-app/main/default/objects/MPM4_BASE__TH_User_Settings__c/fields/MPM4_BASE__Display_Complete_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Display_Complete_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this to show the Complete column on the Time Grid when the Task Object is selected</description>
    <inlineHelpText>Enable this to show the Complete column on the Time Grid when the Task Object is selected</inlineHelpText>
    <label>Display Complete Checkbox</label>
    <type>Checkbox</type>
</CustomField>