force-app/main/default/objects/MPM4_BASE__TH_User_Settings__c/fields/MPM4_BASE__Display_Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Display_Estimated_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Estimated Hours</label>
    <type>Checkbox</type>
</CustomField>