force-app/main/default/objects/MPM4_BASE__TH_User_Settings__c/fields/MPM4_BASE__Event_Sync__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Event_Sync__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Event Sync</label>
    <type>Checkbox</type>
</CustomField>