force-app/main/default/objects/MPM4_BASE__TH_User_Settings__c/fields/MPM4_BASE__First_Day_Of_Week__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__First_Day_Of_Week__c</fullName>
    <inlineHelpText>This day will be used as the beginning of the week on the Time Entry page. If left blank, the first day of the week will be determined by the user&apos;s locale. Enter one of the following values without quotes: &apos;SUN&apos;, &apos;MON&apos;, &apos;TUE&apos;, &apos;WED&apos;, &apos;THU&apos;, &apos;FRI&apos;, &apos;SAT&apos;.</inlineHelpText>
    <label>First Day of Week</label>
    <length>3</length>
    <type>Text</type>
</CustomField>