force-app/main/default/objects/MPM4_BASE__TH_User_Settings__c/fields/MPM4_BASE__Hide_Submit_And_ApproveDeny__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Hide_Submit_And_ApproveDeny__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this to hide the Submit and Approve/Deny columns on the Time Grid</description>
    <inlineHelpText>Enable this to hide the Submit and Approve/Deny columns on the Time Grid</inlineHelpText>
    <label>Hide Submit and Approve/Deny</label>
    <type>Checkbox</type>
</CustomField>