force-app/main/default/objects/MPM4_BASE__TH_User_Settings__c/fields/MPM4_BASE__Hide_Submit_Without_Notification__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Hide_Submit_Without_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this to hide the Submit Without Notification button on the time submission page.</description>
    <inlineHelpText>Enable this to hide the Submit Without Notification button on the time submission page.</inlineHelpText>
    <label>Hide Submit Without Notification Button</label>
    <type>Checkbox</type>
</CustomField>