force-app/main/default/objects/MPM4_BASE__TH_User_Settings__c/fields/MPM4_BASE__Max_Rows_Per_Page__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Max_Rows_Per_Page__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Max number of rows displayed on the time entry grids. Defaults to 10. (Premium Edition Only)</description>
    <inlineHelpText>Max number of rows displayed on the time entry grids. Defaults to 10. (Premium Edition Only)</inlineHelpText>
    <label>Max Rows Per Page</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>