force-app/main/default/objects/MPM4_BASE__TH_User_Settings__c/fields/MPM4_BASE__Object1__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Object1__c</fullName>
    <label>Object1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>