force-app/main/default/objects/MPM4_BASE__TH_User_Settings__c/fields/MPM4_BASE__Only_Allow_Manager_To_Approve_Time__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Only_Allow_Manager_To_Approve_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, only a user&apos;s manager can approve time in the Time Entry Approval Page.</description>
    <inlineHelpText>When checked, only a user&apos;s manager can approve time in the Time Entry Approval Page.</inlineHelpText>
    <label>Only Allow Manager To Approve Time</label>
    <type>Checkbox</type>
</CustomField>