force-app/main/default/objects/MPM4_BASE__TH_User_Settings__c/fields/MPM4_BASE__Only_Get_Records_From_The_Recent_N_Days__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Only_Get_Records_From_The_Recent_N_Days__c</fullName>
    <defaultValue>90</defaultValue>
    <description>When approving times, only get and work with records from the recent number of days (based on last modified date). Default is 90 days.</description>
    <inlineHelpText>When approving times, only get and work with records from the recent number of days (based on last modified date). Default is 90 days.</inlineHelpText>
    <label>Deprecated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>