force-app/main/default/objects/MPM4_BASE__TH_User_Settings__c/fields/MPM4_BASE__Time_Entry_Max_Records_Displayed__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Time_Entry_Max_Records_Displayed__c</fullName>
    <defaultValue>500</defaultValue>
    <inlineHelpText>Determines how many records will be displayed in the time entry tab. (Premium Edition Only)</inlineHelpText>
    <label>Time Entry Max Records Displayed</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>