force-app/main/default/objects/MPM4_BASE__TH_User_Settings__c/fields/MPM4_BASE__Weekly_Hours_Total_Validation__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Weekly_Hours_Total_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ensures resources weekly time entries add up to at least the value on their resource records weekly workday duration field on submission. Validated as a 40 hour workweek if no workweek duration is set.</inlineHelpText>
    <label>Validate Weekly Total Hours</label>
    <type>Checkbox</type>
</CustomField>